[package]
name = "octox"
description = "Unix like Operating System"
authors = ["Hayato Ohhashi <o8@vmm.dev>"]
edition = "2024"
license.workspace = true
version.workspace = true
repository.workspace = true

[workspace.package]
version = "0.1.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/o8vm/octox"

[[bin]]
name = "octox"
path = "src/kernel/main.rs"

[workspace]
members = [
    "src/kernel",
    "src/mkfs",
    "src/user",
    "src/macros"
]

[workspace.dependencies]
octox_kernel = { path = "src/kernel", default-features = false }
octox_macros = { path = "src/macros" }

[dependencies]
octox_kernel = { workspace = true, features = ["kernel"] }
octox_macros = { workspace = true }
