[package]
name = "libkernel"
description = "A Rust-based library kernel"
authors = ["Hayato Ohhashi <o8@vmm.dev>"]
edition = "2024"
version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "kernel"
path = "lib.rs"

[features]
default = ["kernel"]
kernel = []

[dependencies]
