[package]
name = "octox_mkfs"
description = "mkfs octox file system"
version.workspace = true
authors = ["Hayato Ohhashi <o8@vmm.dev>"]
edition = "2021"
license.workspace = true
repository.workspace = true

[[bin]]
name = "mkfs"
path = "main.rs"

[target.'cfg(not(target_os = "none"))'.dependencies]
octox_kernel = { workspace = true, default-features = false }