cargo-features = ["per-package-target"]

[package]
name = "uprogs"
description = "octox user programs"
authors = ["Hayato Ohhashi <o8@vmm.dev>"]
edition = "2021"
version.workspace = true
license.workspace = true
repository.workspace = true
forced-target = "riscv64gc-unknown-none-elf"

[lib]
name = "ulib"
path = "lib.rs"

[[bin]]
name = "_cat"
path = "cat.rs"

[[bin]]
name = "_echo"
path = "echo.rs"

[[bin]]
name = "_grep"
path = "grep.rs"

[[bin]]
name = "_init"
path = "init.rs"

[[bin]]
name = "_initcode"
path = "initcode.rs"

[[bin]]
name = "_kill"
path = "kill.rs"

[[bin]]
name = "_ln"
path = "ln.rs"

[[bin]]
name = "_ls"
path = "ls.rs"

[[bin]]
name = "_mkdir"
path = "mkdir.rs"

[[bin]]
name = "_rm"
path = "rm.rs"

[[bin]]
name = "_sh"
path = "sh.rs"

[[bin]]
name = "_wc"
path = "wc.rs"

[[bin]]
name = "_head"
path = "head.rs"

[[bin]]
name = "_clear"
path = "clear.rs"

[dependencies]
libkernel = { workspace = true }

[build-dependencies]
libkernel = { workspace = true }
